# timecake

./: .gitignore  CMakeLists.txt  CMake_nRF5x.cmake  LICENSE  README.md  apts.sh  art.lua  art.sh  box-down  box-format  box-mount  box-settings  box-setup  box-tweak  box-umount  box-up  box-up-wait  cmake.sh  flash.sh  gdb.gdb  gdb.sh  install-auto-video-player  install-cambox  install-lcd-driver  install.sh  libfixmath.sh  make.sh  nr5sdk.sh  readme.md  run.sh  tail.sh  timecake.cmake  timecake.ld
art/: face.c  face.h  hours.c  hours.h  lenna.c  lenna.h  minutes.c  minutes.h  seconds.c  seconds.h
notes/: semihosting.md  swd-pi.ocd
raspi/: autostart-openocd  box-apts  box-down  box-format  box-mount  box-settings  box-umount  box-up  install-openocd  readme.md  swd.boot.sh
src/: CMakeLists.txt  app_config.h  main.c  main.h  main_clock1.c  main_test.c  sdk_config.h
src/sys/: acc.c  acc.h  acc_pine.c  battery.c  battery.h  battery_pine.c  button.c  button.h  button_pine.c  clock.c  clock.h  clock_pine.c  debug.h  heart.c  heart.h  heart_pine.c  i2c_pine.c  i2c_pine.h  lcd.c  lcd.h  lcd_font.c  lcd_pine.c  saveram.c  saveram.h  saveram_pine.c  touch.c  touch.h  touch_pine.c
